Use kPlus blending mode for solid-color themed window title bars.

With an image theme we use kPlus blending mode so that the alpha of
the active and inactive images together adds to 255, and is opaque.
Before 45ce9ad0e33550ecf42c50acfcee7461574d9761 [formerly 8f007b9234b738cb34689863b43a6fdff62e9f95] we did the same for
solid colors as well. But afterward it was lost, only applying to
images. This CL restores the kPlus mode for solid colors too.

R=oshima@chromium.org

Bug: 852612
Change-Id: I6f581d34dea85d98dc602e34a4ad87e4115d2d8c
Reviewed-on: https://chromium-review.googlesource.com/1103012
Reviewed-by: Mitsuru Oshima <oshima@chromium.org>
Commit-Queue: danakj <danakj@chromium.org>
Cr-Commit-Position: refs/heads/master@{#568120}
Former-commit-id: 8f074984fcd90bfcb042019683226fb9d1d28967